Updated the servicemix main so that in addition to the servicemix.home it also looks for a servicemix.base which defaults the the servicemix.home value.  servicemix.base is used as the base directroy for all data and config instance files.
git-svn-id: https://svn.apache.org/repos/asf/servicemix/smx4/runtime/trunk@602963 13f79535-47bb-0310-9956-ffa450edef68